Use TTN payload MAC for board identity
